	generation of sugar functions that take one or two double parameters
	
	* inst/include/Rcpp/sugar/gamma.h: using SugarBlock to generate new 
	sugar functions: 
		(1 parameter) : gamma, lgamma, digamma, trigamma, tetragamma, 
		pentagamma, expm1, log1p, factorial, lfactorial
		
		(2 parameter) : choose, lchoose, beta, lbeta, psigamma
	
2010-08-10  Douglas Bates  <bates@stat.wisc.edu>

	* include/Rcpp/stats/nbinom[_mu].h: Replace conflicting data member name
	'size' by 'siz'

2010-08-10  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/stats/random/rnorm.h: Added rnorm and rnorm_

	* inst/include/Rcpp/stats/random/runif.h: Added runif and runif_

	* inst/include/Rcpp/stats/random/rbeta.h: Added rbeta and rbeta_

	* inst/include/Rcpp/stats/random/rcauchy.h: Added rcauchy and rcauchy_

	* inst/include/Rcpp/stats/random/rchisq.h: Added rchisq and rchisq_

	* inst/include/Rcpp/stats/random/rexp.h: Added rexp and rexp_

	* inst/include/Rcpp/stats/random/rf.h: Added rf and rf_

	* inst/include/Rcpp/stats/stats.h : fixed name clash reported on Rcpp-devel
	http://permalink.gmane.org/gmane.comp.lang.r.rcpp/610

2010-08-09  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull|logis|f)
	generated by the script

	* inst/include/Rcpp/vector/Vector.h: further dispatch to allow generators
	to be passed to constructors of Vector

	* inst/include/Rcpp/traits/has_iterator.h: new SFINAE detection of
	generators

	* inst/include/Rcpp/Generator.h : base template class for generators

2010-08-06  Douglas Bates  <bates@stat.wisc.edu>

	* unitTests/runit.stats.R: Corrected instances of numeric
	arguments passed as integers, deleted tests for binomial with
	fixed parameter values.

2010-08-06  Romain Francois <romain@r-enthusiasts.com>

	* ../scripts/stats.R: R script to generate the template code for dpq functions

	* include/Rcpp/stats/unif.h: Added d-p-q unif and tests
